# pyxtc

./: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml
conda.recipe/: meta.yaml
src/: dump_xtc.cpp  dump_xtc.h  main.cpp  xdr_compat.cpp  xdr_compat.h
src/pyxtc/: __init__.py
tests/: test_core.py  test_reader.py
